make it even more minimal

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -10,9 +10,7 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 # Default value: -Xmx512m -XX:MaxMetaspaceSize=256m
-org.gradle.jvmargs=-Xmx5120M
-org.gradle.caching=true
-org.gradle.parallel=true
+org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
@@ -53,11 +51,3 @@ expo.webp.animated=false
 
 # Enable network inspector
 EX_DEV_CLIENT_NETWORK_INSPECTOR=true
-
-# Enable THEOplayer Extensions (default: disabled)
-THEOplayer_extensionCast=true
-THEOplayer_extensionMediaSession=true
-
-# Shrink, obfuscate, and optimize the Java bytecode (default: disabled)
-android.enableProguardInReleaseBuilds=true
-android.enableShrinkResourcesInReleaseBuilds=true
