--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "expo start --dev-client",
-    "android": "expo run:android --variant=devDebug",
+    "android": "expo run:android",
     "ios": "expo run:ios"
   },
   "dependencies": {
